# fastapi-example

./: .gitignore  main.py  pyproject.toml
config/: mongodb.py  settings.py
feeds/: feeds_controller.py  feeds_service.py
feeds/repositories/: feeds_repository.py
schema/: bookmark_schema.py  feed_schema.py  reaction_schema.py  user_schema.py
